<resources>
    <string name="app_name">IntelligentFuel</string>
    <!--company info-->
    <string name="dover">dover</string>
    <!--language info-->
    <string name="language1">中文 </string>
    <string name="language2">ENGLISH</string>
    <string name="language_separator">|</string>
    <string name="notice">notice</string>
    <string name="notice_welcome">欢迎光临中石化加油站</string>
    <string name="more">更多功能</string>
    <string name="bottom_contact">联系我们</string>
    <string name="bottom_right">版权声明</string>
    <string name="bottom_other">其他</string>
    <string name="bottom_sinopec_website">中石化网址：</string>
    <string name="bottom_sinopec_website_value">http://www.sinopec.com</string>
    <string name="take_a_picture">拍照</string>
    <string name="close">关闭</string>
    <string name="pay_in_cash">现金支付</string>
    <string name="pay_by_mobile">移动支付</string>
    <string name="oil_98">98号汽油</string>
    <string name="oil_95">95号汽油</string>
    <string name="oil_0">0#柴油</string>
    <string name="oil_92">92号汽油</string>
    <string name="oil_89">89号汽油</string>
    <string name="gun_status_1">空闲</string>
    <string name="gun_num_1">1</string>
    <string name="gun_num_2">2</string>
    <string name="gun_num_3">3</string>
    <string name="gun_num_4">4</string>
</resources>
