<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent" android:background="#151922">

    <LinearLayout android:id="@+id/bottomLink" style="@style/bottom_box">

        <TextView android:text="@string/bottom_sinopec_website" style="@style/bottom_text" />
        <TextView android:text="@string/bottom_sinopec_website_value" style="@style/bottom_text" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

        <LinearLayout style="@style/top_bar">

            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="20dp">

                <LinearLayout style="@style/wrap_content" android:orientation="horizontal" android:layout_gravity="start|center_vertical" android:gravity="center_vertical">

                    <ImageView style="@style/company_logo" android:src="@mipmap/sinopec" android:contentDescription="@string/dover" />

                </LinearLayout>

                <LinearLayout style="@style/language_box">

                    <TextView style="@style/language_item" android:text="@string/language1" />
                    <TextView style="@style/language_item" android:text="@string/language_separator" android:layout_marginStart="10dp" android:layout_marginEnd="10dp" />
                    <TextView style="@style/language_item" android:text="@string/language2" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

                <ImageView style="@style/wrap_content" android:src="@drawable/notice_top_angle" android:contentDescription="@string/notice_welcome" android:layout_marginStart="100dp" />

            </LinearLayout>

            <LinearLayout style="@style/notice_box">

                <ImageView style="@style/notice_icon" android:contentDescription="@string/notice" />

                <TextView style="@style/notice_text" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout android:id="@+id/mVideoViewBox" style="@style/video_box">

            <VideoView android:id="@+id/mVideoView" style="@style/video_fit" />

            <LinearLayout android:id="@+id/mVideoIndexBox" style="@style/video_index_box" />

        </RelativeLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="55dp" android:paddingEnd="56dp" android:layout_marginTop="40dp" android:layout_marginBottom="10dp">
            <android.support.v7.widget.RecyclerView style="@style/wrap_content" android:id="@+id/loopImageRecyclerView" />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="horizontal">

            <RelativeLayout style="@style/gun_display_item">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                    <LinearLayout android:layout_width="match_parent" android:layout_height="250dp" android:background="@mipmap/gun_item_bg" android:gravity="center">
                        <LinearLayout android:layout_width="156dp" android:layout_height="200dp" android:background="@drawable/gun_item_radius" android:gravity="center">
                            <ImageView android:layout_width="120dp" android:layout_height="wrap_content" android:scaleType="fitCenter" android:src="@mipmap/gun" android:contentDescription="@string/notice_welcome" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent" android:layout_height="200dp" android:orientation="horizontal">
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#F03840">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_1" android:contentDescription="@string/pay_in_cash" />
                        </LinearLayout>
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#ed212a">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_2" android:contentDescription="@string/pay_by_mobile" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:layout_width="match_parent" android:layout_height="100dp" android:layout_centerInParent="true" android:gravity="center">
                    <TextView style="@style/gun_oil_type_text" android:text="@string/oil_98" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout style="@style/gun_display_item">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                    <LinearLayout android:layout_width="match_parent" android:layout_height="250dp" android:background="@mipmap/gun_item_bg" android:gravity="center">
                        <LinearLayout android:layout_width="156dp" android:layout_height="200dp" android:background="@drawable/gun_item_radius" android:gravity="center">
                            <ImageView android:layout_width="120dp" android:layout_height="wrap_content" android:scaleType="fitCenter" android:src="@mipmap/gun" android:contentDescription="@string/notice_welcome" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent" android:layout_height="200dp" android:orientation="horizontal">
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#F03840">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_1" android:contentDescription="@string/pay_in_cash" />
                        </LinearLayout>
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#ed212a">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_2" android:contentDescription="@string/pay_by_mobile" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:layout_width="match_parent" android:layout_height="100dp" android:layout_centerInParent="true" android:gravity="center">
                    <TextView style="@style/gun_oil_type_text" android:text="@string/oil_92" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout style="@style/gun_display_item">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                    <LinearLayout android:layout_width="match_parent" android:layout_height="250dp" android:background="@mipmap/gun_item_bg" android:gravity="center">
                        <LinearLayout android:layout_width="156dp" android:layout_height="200dp" android:background="@drawable/gun_item_radius" android:gravity="center">
                            <ImageView android:layout_width="120dp" android:layout_height="wrap_content" android:scaleType="fitCenter" android:src="@mipmap/gun" android:contentDescription="@string/notice_welcome" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent" android:layout_height="200dp" android:orientation="horizontal">
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#F03840">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_1" android:contentDescription="@string/pay_in_cash" />
                        </LinearLayout>
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#ed212a">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_2" android:contentDescription="@string/pay_by_mobile" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:layout_width="match_parent" android:layout_height="100dp" android:layout_centerInParent="true" android:gravity="center">
                    <TextView style="@style/gun_oil_type_text" android:text="@string/oil_95" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout style="@style/gun_display_item">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                    <LinearLayout android:layout_width="match_parent" android:layout_height="250dp" android:background="@mipmap/gun_item_bg" android:gravity="center">
                        <LinearLayout android:layout_width="156dp" android:layout_height="200dp" android:background="@drawable/gun_item_radius" android:gravity="center">
                            <ImageView android:layout_width="120dp" android:layout_height="wrap_content" android:scaleType="fitCenter" android:src="@mipmap/gun" android:contentDescription="@string/notice_welcome" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout android:layout_width="match_parent" android:layout_height="200dp" android:orientation="horizontal">
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#F03840">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_1" android:contentDescription="@string/pay_in_cash" />
                        </LinearLayout>
                        <LinearLayout android:layout_width="117dp" android:layout_height="match_parent" android:gravity="center" android:background="#ed212a">
                            <ImageView style="@style/pay_icon" android:src="@mipmap/pay_2" android:contentDescription="@string/pay_by_mobile" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:layout_width="match_parent" android:layout_height="100dp" android:layout_centerInParent="true" android:gravity="center">
                    <TextView style="@style/gun_oil_type_text" android:text="@string/oil_89" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout style="@style/more_box">

            <TextView android:id="@+id/moreButton" style="@style/wrap_content" android:text="@string/more" android:textSize="18sp" android:textColor="#eb2129" />

            <ImageView android:layout_width="30dp" android:layout_height="30dp" android:scaleType="fitXY" android:src="@mipmap/right_angle" android:contentDescription="@string/notice_welcome" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout android:id="@+id/cameraViewBox" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="bottom" android:layout_marginBottom="100dp" android:visibility="gone">

        <SurfaceView android:id="@+id/cameraView" android:layout_width="800dp" android:layout_height="800dp" android:layout_centerInParent="true" />

        <LinearLayout style="@style/wrap_content" android:orientation="vertical" android:layout_toEndOf="@id/cameraView" android:layout_marginStart="20dp">

            <LinearLayout style="@style/camera_side_item" android:id="@+id/takePictureTrigger">
                <ImageView style="@style/camera_side_icon" android:src="@mipmap/take_a_picture" android:contentDescription="@string/take_a_picture" />
            </LinearLayout>

            <LinearLayout style="@style/camera_side_item" android:id="@+id/closeCameraTrigger">
                <ImageView style="@style/camera_side_icon" android:src="@mipmap/close" android:contentDescription="@string/close" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
